--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -46,6 +46,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@lukso/lsp-smart-contracts": "^0.12.1",
     "@openzeppelin/contracts": "^4.8.1",
     "dotenv": "^16.0.3",
     "envfile": "^6.18.0",
